--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
     </head>
     <body>
         
-        <header class="site-header" style="background-image: url({{ asset('img/background.jpg') }})">
+        <header class="site-header">
             <span class="site-title">My Symfony Site</span>
         </header>
         
@@ -25,6 +25,8 @@
                 <li><a href="{{ path('about') }}">About</a></li>
                 <li><a href="{{ path('report') }}">Report</a></li>
                 <li><a href="{{ path('lucky_number') }}">Lucky number</a></li>
+                <li><a href="{{ path('api_index') }}">Api</a></li>
+
             </ul>
         </nav>
 
