--- a/templates/api.html.twig
+++ b/templates/api.html.twig
@@ -5,8 +5,10 @@
 {% block body %}
     <h1>Api routes</h1>
     
+    <div class="lankar">
     <ul>
         <li><a href="{{ path('jsonNumber') }}">Lucky Number API</a></li>
         <li><a href="{{ path('quote') }}">Quote API</a></li>
     </ul>
+    </div>
 {% endblock %}
