--- a/templates/lucky_number.html.twig
+++ b/templates/lucky_number.html.twig
@@ -1,5 +1,3 @@
-{# templates/lucky_number.html.twig #}
-
 {% extends "base.html.twig" %}
 
 {% block title %}Magic number{% endblock %}
@@ -9,8 +7,9 @@
     <p>Welcome to my awesome magical homepage.</p>
     <p>This is the current magic number: {{ number }}</p>
 
-    <img class="rotate" src="{{ asset('build/images/crazy.JPEG') }}" alt="">
-    <img class="rotate" src="{{ asset('build/images/homer.png') }}" alt="">
-
+    <div class="image-container">
+        <img class="rotate" src="{{ asset('build/images/crazy.JPEG') }}" alt="">
+        <img class="rotate-2" src="{{ asset('build/images/homer.png') }}" alt="">
+    </div>
 
 {% endblock %}
