--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -21,21 +21,21 @@
 
     <h1>Redovisning</h1>
     <h2 id="kmom01">kmom01</h2>
-    <p>Berätta kort om dina förkunskaper och tidigare erfarenheter kring objektorientering.</p>
+    <h4>Berätta kort om dina förkunskaper och tidigare erfarenheter kring objektorientering.</h4>
+    <p>Jag har inte särkilt mycket förkunskaper inom objektorientering. Det är något jag upplevt som väldigt svårt. Jag har fått en introduktion kring objektorientering inom python men jag hade välgit svårt att greppa hur det funka helt och hållet då. Hoppas jag kan lära mig bättre i denna kurs då det är något jag väldigt gärna lär mig mer av.</p>
 
-    <p>Berätta kort om PHPs modell för klasser och objekt. Vilka är de grunder man behöver veta/förstå för att kunna komma igång och skapa sina första klasser?</p>
-        
-    <p>Reflektera kort över den kodbas, koden, strukturen som användes till uppgiften me/report, hur uppfattar du den?</p>
-        
-    <p>Med tanke på artikeln “PHP The Right Way”, vilka delar in den finner du extra intressanta och värdefulla? Är det några särskilda områden som du känner att du vill veta mer om? Lyft fram några delar av artikeln som du känner mer värdefulla.</p>
-        
-    <p> Vilken är din TIL för detta kmom?</p>
-    <p>Jag har inte  särkilt mycket förkunskaper om objektorientering. Det är något jag upplevt som verkar väldigt svårt. Jag har fått en introduktion kring det men är  långt ifrån kunnig.</p>
+    <h4>Berätta kort om PHPs modell för klasser och objekt. Vilka är de grunder man behöver veta/förstå för att kunna komma igång och skapa sina första klasser?</h4>
     <p>Klasser i PHP är som mallar för att göra nya saker. Man använder dem för att skapa objekt. I en klass kan man lägga till egenskaper, som är typ olika delar som man kan ändra på. Även metoder finns vilket är som att ha olika sätt att göra saker med de delarna.</p>
-    <p>En klass eller class är då som en behållare där du kan ha både saker att hålla reda på och sätt att göra saker med dem på.</p>
-    <p>Tycker generellt att strukturen till me/report var särkilt komplicerad. Koden i säg var rätt hanterbar, forstod ganska direkt hur jag skulle jobba med det jag fick från övnngen. </p>
+    <p>En klass eller en "class" som man skriver när man programmerar är då som en behållare där du kan ha både saker att hålla reda på och sätt att göra saker med dem på.</p>
+
+    <h4>Reflektera kort över den kodbas, koden, strukturen som användes till uppgiften me/report, hur uppfattar du den?</h4>
+    <p>Tycker generellt att koden inom hela Kursmomentet inte var särkilt komplicerad. Koden för me/report var hanterbar, forstod ganska direkt hur jag skulle jobba med det jag fick från övnngen. Kodstrukturen tyckte jag dock var lite svårare att förstå. Tog lite tid att förstå hur jag skulle jobba med de olika mapparna så allt skulle fungera men det gick rätt bra efter ett tag! </p>
+
+    <h4>Med tanke på artikeln “PHP The Right Way”, vilka delar in den finner du extra intressanta och värdefulla? Är det några särskilda områden som du känner att du vill veta mer om? Lyft fram några delar av artikeln som du känner mer värdefulla.</h4>
     <p>I artikeln "php the right way" fann jag ganska bra med info och tips om hur man skulle använda sig av php, tyckte nog bäst om "Command Line Interface" då det visa lite hur man kan använda sig utav det. just det var kanske inte så komplicerat men tycker ändå jag fick lite mer "trygghet" i att läsa det. Även coding practices gav liknande effekt på mitt lärande.</p>
-    <p>Mitt til för kmom01 skulle jag väl säga är kodstrukturen främst men sedan också typ hur allt fungerar ihop, fixa med terminalen och för att kunna använda Symfony i webbläsaren. Något som inte är helt nytt men som jag lärt mig av är dock att använda mig av github då jag stötte på rejäla problem med att kunna commita och push allt till mitt konto!</p>
+        
+    <h4> Vilken är din TIL för detta kmom?</h4>
+    <p>Mitt til för kmom01 skulle jag väl säga är kodstrukturen främst men sedan också typ hur allt fungerar ihop, fixa med terminalen och för att kunna använda Symfony i webbläsaren. Något som inte är helt nytt men som jag lärt mig mer av är dock att använda mig av github. Jag stötte på rejäla problem med att kunna commita och push allt till mitt konto samt länka allt till mitt repo, men det löste sig efter lite hjälp!</p>
 
     
     <h2 id="kmom02">kmom02</h2>
