--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,6 +2,7 @@ main {
     margin: 0 auto;
     max-width: 600px;
     min-height: 100vh;
+    padding: 0.5em;
 
 }
 
@@ -117,4 +118,56 @@ h1 {
 
 .lankar a:hover {
     color: #aaf6aa;
+}
+
+/***
+* kmom02
+*/
+/* body {
+    margin: 0 auto;
+    max-width: 800px;
+    background-color: #eee;
+    font-size: 2em;
+} */
+
+input {
+    font-size: 1em;
+}
+
+h1 {
+    border-bottom: 4px double green;
+}
+
+.die {
+    font-size: 3em;
+}
+
+ul.dicearea {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+ul.dicearea li {
+    display: inline;
+}
+
+.flash-notice {
+    padding: 0.5em;
+    color: #004085;
+    background-color: #cce5ff;
+    border-color: #b8daff;
+}
+.flash-notice:before {
+    content: "ⓘ";
+}
+
+.flash-warning {
+    padding: 0.5em;
+    color: #856404;
+    background-color: #fff3cd;
+    border-color: #ffeeba;
+}
+.flash-warning:before {
+    content: "⚠";
 }
